add files for 2021

--- a/server/html/index.html
+++ b/server/html/index.html
@@ -1,24 +1,60 @@
 ﻿<!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Ajoe祝您新春快尔</title>
-
-
-<link rel="stylesheet" href="css/style.css">
-
+  <meta charset="UTF-8">
+  <title>Ajoe祝您新春快乐</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <div class="deng-box">
+    <div class="deng">
+      <div class="xian"></div>
+      <div class="deng-a">
+        <div class="deng-b">
+          <div class="deng-t">节</div>
+        </div>
+      </div>
+      <div class="shui shui-a">
+        <div class="shui-c"></div>
+        <div class="shui-b"></div>
+      </div>
+    </div>
+  </div>
+    <!-- 灯笼 2 -->
+  <div class="deng-box1">
+    <div class="deng">
+        <div class="xian"></div>
+        <div class="deng-a">
+            <div class="deng-b"><div class="deng-t">春</div></div>
+        </div>
+        <div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+    </div>
+  </div>
+  <div class="video-section">
+    <video autoplay="autoplay" xs-video-player-type="h5-page" playsinline="true" controls loop>
+      <source src="./wishes.mp4" type="video/mp4">
+      </source>
+    </video>
+    <div class="text-description">
+      各位亲朋好友，老师同学。在新的一年，辞别旧岁，同贺新禧；愿您新年及以后：<br>
+      所走之路，皆能畅行无碍; <br>
+      所到之处，皆是春暖花开; <br>
+      所遇之人，皆能如沐春风。<br>
+      <br>
+      祥牛迎春，福满齐天，接福纳财，恭贺新年，<br>
+      千祥云集，红红火火，安居乐业，畅享幸福。
+    </div>
+  </div>
 
-<section class="section">
-  
-  <h2 class="section__title">
-    <p>Ajoe</p>
-    Happy New Year<br><span>2021</span></h2>
-</section>
-
-<script src="js/script.js"></script>
+  <section class="section">
+    <h2 class="section__title">
+      Happy New Year<br><span>2021</span>
+    </h2>
+  </section>
+  <script src="js/script.js"></script>
 
 </body>
-</html>
 
+</html>
